@@ -4,6 +4,7 @@
 
 2013-05-17 1.9.7.4
 - added another fallback for snmp-get_entries
+- fixed a bug in uptime (only first minute after reboot)
 
 2013-04-20 1.9.7.3
 - fixed a bug in snmpwalk simulation and savestate
